# remendo

./: .gitignore  Makefile.am  README  README.md  TODO  autogen-clean.sh  configure.ac  events.xml  pacman-monitoring.c
data/: events.xml
remendo/: Makefile.am  dl_events.h  remendo.c  remendo.h  xml_handler.c  xml_handler.h
remendo-gtk/: Makefile.am  autogen-clean.sh  configure.ac
remendo-gtk/po/: POTFILES.in
remendo-gtk/src/: Makefile.am  remendo_gtk.py  remendo_gtk.ui
src/: Makefile.am  dl_events.c  dl_events.c~  dl_events.h  dl_events.h~  main.c  main.c~  remendo-gtk.c  remendo-gtk.h  remendo.c  remendo.c~  remendo.h  remendo.h~  xml_handler.c  xml_handler.c~  xml_handler.h  xml_handler.h~
src/gtk/: Makefile.am  remendo-gtk.c  remendo-gtk.h  remendo-gtk.ui
